# GnosisGraph

./: .gitignore  README.md  compose.prod.yml  database.py  et --soft 3f941e1  export_csv.sh  fix_author.py  fix_missing_authors.py  main.py  pyproject.toml  update_imports.py
.github/workflows/: deploy.yml
Articles/: ArticleTag.py  __init__.py  audit_article.py  queryArticle.py  saveArticle.py  scrapArticle.py
Authors/: queryAuthor.py  saveAuthor.py  scrapAuthor.py
Autores/: __init__.py  scrapAuthor.py
Categoria/: __init__.py  saveCategory.py
Categories/: Category.py  queryCategory.py  saveCategory.py  scrapCategory.py
Embeddings/: local_embedding_client.py  process_articles.py
Tags/: __init__.py  queryTag.py  saveTag.py  scrapTag.py
Topics/: extractor.py  model.py
docs/: # Guion oral_IA.md  Charla.md  deploy-aws-ec2.md  eom-palette.html  frontend-refactor-audit.md  frontend-refactor-plan.md  informe_diagramas_clases_casos_uso.md  migracion_wsl.md  phase-4-filters-contract.md  plan_de_implementacion.md  presentacion-pfc-estructura.md
models/: Article.py  ArticleAuthor.py  ArticleCategory.py  ArticlePlace.py  ArticleTopic.py  Embedding.py  Tag.py  Topic.py
my-video/src/: Root.tsx
scrapper/: .env.example  .gitignore  database.py  fix_author.py  main.py  pyproject.toml
scrapper/Articles/: __init__.py  (+1 more)
scripts/: backup-db.sh  deploy.sh  ec2-bootstrap.sh  restore-db.sh  setup.sh
utils/: logger.py
web-semantic-explorer/: .env  .env.example  .env.production.example  .gitignore  README.md  compose.yml  development.md  package.json  pnpm-lock.yaml
(+363 files in other folders)
