[project]
name = "root-eom"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "numpy>=2.4.4",
    "pgvector>=0.4.2",
    "pwdlib>=0.3.0",
    "pydantic-settings>=2.14.0",
    "sqlmodel>=0.0.38",
    "tenacity>=8.5.0",
]

[tool.uv.workspace]
members = ["scrapper", "web-semantic-explorer/backend"]
